# rust-std-candidates

./: .travis.yml  Makefile  README.md  cargo-all.sh
matches/: Cargo.toml  lib.rs
matches/tests/: macro_use_one.rs
mod_path/: Cargo.toml  build.rs  lib.rs
mod_path/tests/: it_works.rs
ref_filter_map/: Cargo.toml  lib.rs
return_if_ok/: Cargo.toml  lib.rs
show/: Cargo.toml  lib.rs
string-wrapper/: Cargo.toml  lib.rs
text_writer/: Cargo.toml  lib.rs
triable/: Cargo.toml  lib.rs
zip-longest/: Cargo.toml  lib.rs
zip_longest/: Cargo.toml  lib.rs
