[package]
name = "matches"
version = "0.1.8"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/SimonSapin/rust-std-candidates"
description = "A macro to evaluate, as a boolean, whether an expression matches a pattern."
documentation = "https://docs.rs/matches/"
edition = "2018"

[lib]
name = "matches"
path = "lib.rs"
