[package]
name = "text_writer"
version = "0.1.11"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/SimonSapin/rust-std-candidates"
description = "Depreacted. Use `std::fmt::Write` instead."


[lib]
name = "text_writer"
path = "lib.rs"
doctest = false
