[package]

name = "zip-longest"
version = "0.1.3"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/SimonSapin/rust-std-candidates"
description = "Take two iterators and yield pairs until both are exhausted."

[lib]
name = "zip-longest"
path = "lib.rs"
doctest = false
