[package]

name = "zip-longest"
version = "0.1.6"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/SimonSapin/rust-std-candidates"
description = "Take two iterators and yield pairs until both are exhausted."

[lib]
name = "zip_longest"
path = "lib.rs"
doctest = false
